--- a/frontend/static/html/model-composer.html
+++ b/frontend/static/html/model-composer.html
@@ -1,4 +1,18 @@
-<div id="model-composer" data-colors="#005a66,#0094ab,#b0252e,#cf7a26,#e3c213,#9fb935,#2f476c,#b0006b,#555555,#999999">
+<html id="model-composer">
+
+    <template class="report-params">
+        <input type="color" id="col01" value="#005a66" name="Primaire" />
+        <input type="color" id="col02" value="#0094ab" name="Secondaire" />
+        <input type="color" id="col03" value="#b0252e" name="Infos" />
+        <input type="color" id="col04" value="#cf7a26" name="Texte" />
+        <input type="color" id="col05" value="#e3c213" name="" />
+        <input type="color" id="col06" value="#9fb935" name="" />
+        <input type="color" id="col07" value="#2f476c" name="" />
+        <input type="color" id="col08" value="#b0006b" name="" />
+        <input type="color" id="grey1" value="#555555" name="Gris foncé" />
+        <input type="color" id="grey2" value="#999999" name="Gris moyen" />
+        <input type="color" id="grey3" value="#cccccc" name="Gris clair" />
+    </template>
 
     <!-- HTML wrapper used to construct the main report container in the composer interface -->
     <template class="report-layout" id="wmain">
@@ -18,7 +32,7 @@
                 <button class="btn btn-danger bloc-remove"><i class="fas fa-times"></i> <b>supprimer</b></button>
             </div>
             <span class="structure-label"><i class="fas fa-arrows-alt"></i> {{LABEL}}</span>
-            <div class="structure-html">{{HTML}}<!-- report-structure template is injected here --></div>
+            <div class="structure-html"><!-- report-structure template is injected here -->{{HTML}}</div>
         </li>
     </template>
 
@@ -30,7 +44,7 @@
                 <button class="btn btn-danger bloc-remove"><i class="fas fa-times"></i> <b>supprimer</b></button>
             </div>
             <span class="element-label"><i class="fas fa-arrows-alt"></i> {{LABEL}}</span>
-            <div class="element-html">{{HTML}}<!-- report-element template is injected here --></div>
+            <div class="element-html"><!-- report-element template is injected here -->{{HTML}}</div>
         </li>
     </template>
 
@@ -42,20 +56,13 @@
                 <button class="btn btn-warning edit" data-toggle="modal" data-component="report" data-related-id="{{REF}}" data-target="#wizard-panel"><i class="fas fa-cog"></i> <b>éditer</b></button>
                 <button class="btn btn-danger bloc-remove"><i class="fas fa-times"></i> <b>supprimer</b></button>
             </div>
-        <span class="dataviz-label"><i class="dvz-icon {{ICON}}" title="{{TYPE}}"></i> {{LABEL}}</span>
-        <code class="dataviz-definition"></code>
+            <span class="dataviz-label"><i class="dvz-icon {{ICON}}" title="{{TYPE}}"></i> {{LABEL}}</span>
+            <code class="dataviz-definition"></code>
+        </li>
     </template>
 
-    <!-- HTML wrapper used to add a new child column inside a structure block -->
+    <!-- HTML wrapper used as a container for dataviz|element components inside a bloc layout (cell or data) -->
     <template class="report-layout" id="wcell">
-        <div class="col-{{SIZE}} layout-cell">
-            <ul class="components-container list-group">
-                <!-- dataviz|element components are injected here -->
-            </ul>
-        </div>
-    </template>
-
-    <template class="report-layout" id="wdata">
         <ul class="components-container list-group">
             <!-- dataviz|element components are injected here -->
         </ul>
@@ -66,7 +73,7 @@
     <template class="report-structure" id="btitle">
         <div class="bloc-structure" data-label="Bloc titre" data-description="Bloc titre (autoconfig)">
             <div class="bloc-layout container-fluid layout-data dataviz-autoconfig">
-                <!-- dataviz|element components are injected here -->
+                <!-- components container is injected here -->
             </div>
         </div>
     </template>
@@ -76,7 +83,7 @@
             <div class="bloc-layout container-fluid layout-rows">
                 <div class="row layout-cols fixed-layout">
                     <div class="col-12 layout-cell">
-                        <!-- dataviz|element components are injected here -->
+                        <!-- components container is injected here -->
                     </div>
                 </div>
             </div>
@@ -92,12 +99,12 @@
             <div class="bloc-layout container-fluid layout-rows">
                 <div class="row layout-cols fixed-layout">
                     <div class="col-12 layout-cell">
-                        <!-- dataviz|element components are injected here -->
+                        <!-- components container is injected here -->
                     </div>
                 </div>
             </div>
             <div class="bloc-sources editable-text">
-                SOURCE: INSEE <strong>publication 2020</strong>
+                <!-- this text is editable in composer -->SOURCE: xxx
             </div>
         </div>
     </template>
@@ -111,15 +118,15 @@
             <div class="bloc-layout container-fluid layout-rows">
                 <div class="row layout-cols fixed-layout">
                     <div class="col-6 layout-cell">
-                        <!-- dataviz|element components are injected here -->
+                        <!-- components container is injected here -->
                     </div>
                     <div class="col-6 layout-cell">
-                        <!-- dataviz|element components are injected here -->
+                        <!-- components container is injected here -->
                     </div>
                 </div>
             </div>
             <div class="bloc-sources editable-text">
-                SOURCE: INSEE <strong>publication 2020</strong>
+                <!-- this text is editable in composer -->SOURCE: xxx
             </div>
         </div>
     </template>
@@ -133,18 +140,18 @@
             <div class="bloc-layout container-fluid layout-rows">
                 <div class="row layout-cols fixed-layout">
                     <div class="col-4 layout-cell">
-                        <!-- dataviz|element components are injected here -->
+                        <!-- components container is injected here -->
                     </div>
                     <div class="col-4 layout-cell">
-                        <!-- dataviz|element components are injected here -->
+                        <!-- components container is injected here -->
                     </div>
                     <div class="col-4 layout-cell">
-                        <!-- dataviz|element components are injected here -->
+                        <!-- components container is injected here -->
                     </div>
                 </div>
             </div>
             <div class="bloc-sources editable-text">
-                SOURCE: INSEE <strong>publication 2020</strong>
+                <!-- this text is editable in composer -->SOURCE: xxx
             </div>
         </div>
     </template>
@@ -158,27 +165,27 @@
             <div class="bloc-layout container-fluid layout-rows">
                 <div class="row layout-cols fixed-layout">
                     <div class="col-4 layout-cell">
-                        <!-- dataviz|element components are injected here -->
+                        <!-- components container is injected here -->
                     </div>
                     <div class="col-4 layout-cell">
-                        <!-- dataviz|element components are injected here -->
+                        <!-- components container is injected here -->
                     </div>
                     <div class="col-4 layout-rows">
                         <div class="row layout-cols fixed-layout">
                             <div class="col-12 layout-cell">
-                                <!-- dataviz|element components are injected here -->
+                                <!-- components container is injected here -->
                             </div>
                         </div>
                         <div class="row layout-cols fixed-layout">
                             <div class="col-12 layout-cell">
-                                <!-- dataviz|element components are injected here -->
+                                <!-- components container is injected here -->
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="bloc-sources editable-text">
-                SOURCE: INSEE <strong>publication 2020</strong>
+                <!-- this text is editable in composer -->SOURCE: xxx
             </div>
         </div>
     </template>
@@ -194,13 +201,13 @@
 
 
     <!-- REQUERY title component -->
-    <template class="report-component dataviz" id="dvz-title" data-ref="title">
+    <template class="report-component" id="dvz-title" data-ref="title">
         <div class="report-component.title">
             <h1 id="{{dataviz}}" class="dataviz report-title"></h1>
         </div>
     </template>
     <!-- REQUERY figure component -->
-    <template class="report-component dataviz" id="dvz-figure" data-ref="figure">
+    <template class="report-component" id="dvz-figure" data-ref="figure">
         <div class="report-component.figure card-body">
             <div id="{{dataviz}}" class="dataviz report-figure custom-icon icon-default">
                 <figure>
@@ -211,7 +218,7 @@
         </div>
     </template>
     <!-- REQUERY chart component -->
-    <template class="report-component dataviz" id="dvz-chart" data-ref="chart">
+    <template class="report-component" id="dvz-chart" data-ref="chart">
         <div class="report-component.chart full-width">
             <div class="report-dataviz-title" >Titre</div>
             <div id="{{dataviz}}" data-title="Titre" data-description="Description" class="dataviz report-chart"></div>
@@ -219,7 +226,7 @@
         </div>
     </template>
     <!-- REQUERY table component -->
-    <template class="report-component dataviz" id="dvz-table" data-ref="table">
+    <template class="report-component" id="dvz-table" data-ref="table">
         <div class="report-component.chart card-body">
             <div class="report-dataviz-title" >Titre</div>
             <div id="{{dataviz}}" class="dataviz report-table"></div>
@@ -227,7 +234,7 @@
         </div>
     </template>
     <!-- REQUERY text component -->
-    <template class="report-component dataviz" id="dvz-text" data-ref="text">
+    <template class="report-component" id="dvz-text" data-ref="text">
         <div class="report-component.text card-body">
             <div id="{{dataviz}}" class="dataviz report-text">
                 <h3 class="report-text-title"></h3>
@@ -236,7 +243,7 @@
         </div>
     </template>
     <!-- REQUERY image component -->
-    <template class="report-component dataviz" id="dvz-image" data-ref="image">
+    <template class="report-component" id="dvz-image" data-ref="image">
         <div class="report-component.image card-body">
             <div id="{{dataviz}}" class="dataviz report-image">
                 <img src="" class="img-fluid" alt="" />
@@ -244,13 +251,13 @@
         </div>
     </template>
     <!-- REQUERY map component -->
-    <template class="report-component dataviz" id="dvz-map" data-ref="map">
+    <template class="report-component" id="dvz-map" data-ref="map">
         <div class="report-component.map card-body">
             <div id="{{dataviz}}" class="dataviz report-map"></div>
         </div>
     </template>
     <!-- REQUERY iframe component -->
-    <template class="report-component dataviz" id="dvz-iframe" data-ref="iframe">
+    <template class="report-component" id="dvz-iframe" data-ref="iframe">
         <div class="report-component.iframe card-body">
             <div id="{{dataviz}}" class="dataviz report-iframe .hidden-md-down embed-responsive embed-responsive-16by9">
             </div>
@@ -260,4 +267,4 @@
     <!-- STYLE USED BY this TEMPLATE -->
     <style>
     </style>
-</div>
+</html>
