Report: génération des rapports consultables en front à partir du modèle de rendu HTML et des données JSON de la BDD

--- a/frontend/static/html/model-composer.html
+++ b/frontend/static/html/model-composer.html
@@ -80,9 +80,9 @@
 
     <template class="report-structure" id="bsimple">
         <div class="bloc-structure" data-label="Bloc simple" data-description="Bloc contenu uniquement">
-            <div class="bloc-layout container-fluid layout-rows">
-                <div class="row layout-cols fixed-layout">
-                    <div class="col-12 layout-cell">
+            <div class="bloc-layout layout-rows container-fluid">
+                <div class="layout-cols fixed-layout row">
+                    <div class="layout-cell col-12">
                         <!-- components container is injected here -->
                     </div>
                 </div>
@@ -96,9 +96,9 @@
             <div class="bloc-title editable-text">
                 <!-- this text is editable in composer -->Titre du bloc
             </div>
-            <div class="bloc-layout container-fluid layout-rows">
-                <div class="row layout-cols fixed-layout">
-                    <div class="col-12 layout-cell">
+            <div class="bloc-layout layout-rows container-fluid">
+                <div class="layout-cols fixed-layout row">
+                    <div class="layout-cell col-12">
                         <!-- components container is injected here -->
                     </div>
                 </div>
@@ -115,12 +115,12 @@
             <div class="bloc-title editable-text">
                 <!-- this text is editable in composer -->Titre du bloc
             </div>
-            <div class="bloc-layout container-fluid layout-rows">
-                <div class="row layout-cols fixed-layout">
-                    <div class="col-6 layout-cell">
+            <div class="bloc-layout layout-rows container-fluid">
+                <div class="layout-cols fixed-layout row">
+                    <div class="layout-cell col-6">
                         <!-- components container is injected here -->
                     </div>
-                    <div class="col-6 layout-cell">
+                    <div class="layout-cell col-6">
                         <!-- components container is injected here -->
                     </div>
                 </div>
@@ -137,15 +137,15 @@
             <div class="bloc-title editable-text">
                 <!-- this text is editable in composer -->Titre du bloc
             </div>
-            <div class="bloc-layout container-fluid layout-rows">
-                <div class="row layout-cols fixed-layout">
-                    <div class="col-4 layout-cell">
+            <div class="bloc-layout layout-rows container-fluid">
+                <div class="layout-cols fixed-layout row">
+                    <div class="layout-cell col-4">
                         <!-- components container is injected here -->
                     </div>
-                    <div class="col-4 layout-cell">
+                    <div class="layout-cell col-4">
                         <!-- components container is injected here -->
                     </div>
-                    <div class="col-4 layout-cell">
+                    <div class="layout-cell col-4">
                         <!-- components container is injected here -->
                     </div>
                 </div>
@@ -162,22 +162,22 @@
             <div class="bloc-title editable-text">
                 <!-- this text is editable in composer -->Titre du bloc
             </div>
-            <div class="bloc-layout container-fluid layout-rows">
-                <div class="row layout-cols fixed-layout">
-                    <div class="col-4 layout-cell">
+            <div class="bloc-layout layout-rows container-fluid">
+                <div class="layout-cols fixed-layout row">
+                    <div class="layout-cell col-4">
                         <!-- components container is injected here -->
                     </div>
-                    <div class="col-4 layout-cell">
+                    <div class="layout-cell col-4">
                         <!-- components container is injected here -->
                     </div>
                     <div class="col-4 layout-rows">
-                        <div class="row layout-cols fixed-layout">
-                            <div class="col-12 layout-cell">
+                        <div class="layout-cols fixed-layout row">
+                            <div class="layout-cell col-12">
                                 <!-- components container is injected here -->
                             </div>
                         </div>
-                        <div class="row layout-cols fixed-layout">
-                            <div class="col-12 layout-cell">
+                        <div class="layout-cols fixed-layout row">
+                            <div class="layout-cell col-12">
                                 <!-- components container is injected here -->
                             </div>
                         </div>
