--- a/frontend/static/html/model-b.html
+++ b/frontend/static/html/model-b.html
@@ -1,150 +1,184 @@
-<div id="model-b" data-colors="#005a66,#0094ab,#b0252e,#cf7a26,#e3c213,#9fb935,#2f476c,#b0006b,#555555,#999999">
-    <!-- REQUERY template report is the main report div -->
-    <template class="report-main">
+<html id="model-b">
+
+    <template class="report-params">
+        <input type="color" id="col01" value="#005a66" name="Primaire" />
+        <input type="color" id="col02" value="#0094ab" name="Secondaire" />
+        <input type="color" id="col03" value="#b0252e" name="Infos" />
+        <input type="color" id="col04" value="#cf7a26" name="Texte" />
+        <input type="color" id="col05" value="#e3c213" name="" />
+        <input type="color" id="col06" value="#9fb935" name="" />
+        <input type="color" id="col07" value="#2f476c" name="" />
+        <input type="color" id="col08" value="#b0006b" name="" />
+        <input type="color" id="grey1" value="#555555" name="Gris foncé" />
+        <input type="color" id="grey2" value="#999999" name="Gris moyen" />
+        <input type="color" id="grey3" value="#cccccc" name="Gris clair" />
+    </template>
+
+    <!-- HTML wrapper used to construct the main report container in the composer interface -->
+    <template class="report-layout" id="wmain">
         <div class="container-fluid model-b">
-            <div class="container report">
-                <!-- title and blocs are injected here -->
+            <div class="container report" id="report-composition">
+                <!-- blocs are injected here -->
             </div>
         </div>
     </template>
-    <template class="report-bloc-title" id="btitle">
-        <div class="report-bloc-title" data-model-title="Titre" data-model-description="Titre">
-            <div class="component-container"></div>
+
+    <!-- HTML wrapper used to construct structural blocks and append it to dom in #structure-models list -->
+    <template class="report-layout" id="wstructure">
+            <!-- report-structure template is injected here -->{{HTML}}
+    </template>
+
+    <!-- HTML wrapper used to construct elements components and append it to dom in #element-models list -->
+    <template class="report-layout" id="welement">
+        <li class="element-item list-group-item">
+            <!-- report-element template is injected here -->{{HTML}}
+        </li>
+    </template>
+
+    <!-- HTML wrapper used to construct dataviz components and append them to dom in #dataviz-items list -->
+    <template class="report-layout" id="wdataviz">
+    </template>
+
+    <!-- HTML wrapper used as a container for dataviz|element components inside a bloc layout (cell or data) -->
+    <template class="report-layout" id="wcell">
+        <div class="components-container card list-group-item">
+            <!-- dataviz|element components are injected here -->
         </div>
     </template>
+
+
+
+    <template class="report-structure" id="btitle">
+        <div class="report-bloc-title">
+            <div class="bloc-layout">
+                <div class="components-container"></div>
+            </div>
+        </div>
+    </template>
+
+    <template class="report-structure" id="bsimple">
+        <div class="lyrow report-bloc bsimple">
+            <div class="bloc-layout layout-rows view">
+                <div class="layout-cols row">
+                    <div class="layout-cell col-12 dividedcolumn customBaseColumn">
+                        <!-- components container is injected here -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </template>
+
     <!-- REQUERY (n) template report-bloc is a report bloc -->
-    <template class="report-bloc" id="b4-4-4_2">
-        <div class="lyrow report-bloc b4-4-4_2" data-model-title="3 colonnes(4)" data-model-description="33%/33%/33%">
+    <template class="report-structure" id="b12">
+        <div class="lyrow report-bloc b12">
+            <h4 class="bloc-title">
+                <!-- this text is editable in composer -->
+            </h4>
+            <div class="bloc-layout layout-rows view">
+                <div class="layout-cols row">
+                    <div class="layout-cell col-12 dividedcolumn customBaseColumn">
+                        <!-- components container is injected here -->
+                    </div>
+                </div>
+            </div>
+            <div class="bloc-sources">
+                <!-- this text is editable in composer -->
+            </div>
+        </div>
+    </template>
+
+    <!-- REQUERY (n) template report-bloc is a report bloc -->
+    <template class="report-structure" id="b6-6">
+        <div class="lyrow report-bloc b6-6">
+            <h4 class="bloc-title">
+                <!-- this text is editable in composer -->
+            </h4>
+            <div class="bloc-layout layout-rows view">
+                <div class="layout-cols row">
+                    <div class="layout-cell col-6 dividedcolumn customBaseColumn">
+                        <!-- components container is injected here -->
+                    </div>
+                    <div class="layout-cell col-6 dividedcolumn customBaseColumn">
+                        <!-- components container is injected here -->
+                    </div>
+                </div>
+            </div>
+            <div class="bloc-sources">
+                <!-- this text is editable in composer -->
+            </div>
+        </div>
+    </template>
+
+    <!-- REQUERY (n) template report-bloc is a report bloc -->
+    <template class="report-structure" id="b4-4-4">
+        <div class="lyrow report-bloc b4-4-4">
+            <h4 class="bloc-title">
+                <!-- this text is editable in composer -->
+            </h4>
+            <div class="bloc-layout layout-rows view">
+                <div class="layout-cols row">
+                    <div class="layout-cell col-4 dividedcolumn customBaseColumn">
+                        <!-- components container is injected here -->
+                    </div>
+                    <div class="layout-cell col-4 dividedcolumn customBaseColumn">
+                        <!-- components container is injected here -->
+                    </div>
+                    <div class="layout-cell col-4 dividedcolumn customBaseColumn">
+                        <!-- components container is injected here -->
+                    </div>
+                </div>
+            </div>
+            <div class="bloc-sources">
+                <!-- this text is editable in composer -->
+            </div>
+        </div>
+    </template>
+
+    <!-- REQUERY (n) template report-bloc is a report bloc -->
+    <template class="report-structure" id="b4-4-4_2">
+        <div class="lyrow report-bloc b4-4-4_2">
             <!-- REQUERY bloc-title, editable-text means that is editable in composer -->
-            <h4 class="bloc-title editable-text">Titre du bloc
+            <h4 class="bloc-title">
                 <!-- this text is editable in composer -->
             </h4>
             <!-- REQUERY bloc-layout -->
-            <div class="view bloc-layout">
-                <div class="row">
-                    <div class="col-md-4 dividedcolumn customBaseColumn">
-                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
+            <div class="bloc-layout layout-rows view">
+                <div class="layout-cols row">
+                    <div class="layout-cell col-4 dividedcolumn customBaseColumn">
+                        <!-- components container is injected here -->
                     </div>
-                    <div class="col-md-4 dividedcolumn customBaseColumn">
-                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
+                    <div class="layout-cell col-4 dividedcolumn customBaseColumn">
+                        <!-- components container is injected here -->
                     </div>
-                    <div class="col-md-4 customBaseColumn">
-                        <div class="lyrow h-50 verticalDivision">
-                            <div class="view">
-                                <div class="row">
-                                    <div class="col-md-12 dividedcolumn customBaseColumn">
-                                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
-                                    </div>
-                                </div>
-                            </div>
+                    <div class="col-4 layout-rows customBaseColumn">
+                        <div class="layout-cols row lyrow h-50 verticalDivision">
+                             <div class="layout-cell col-12 dividedcolumn customBaseColumn">
+                                  <!-- components container is injected here -->
+                             </div>
                         </div>
-                        <div class="lyrow h-50 verticalDivision ">
-                            <div class="view">
-                                <div class="row">
-                                    <div class="col-md-12 dividedcolumn customBaseColumn">
-                                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="layout-cols row lyrow h-50 verticalDivision">
+                             <div class="layout-cell col-12 dividedcolumn customBaseColumn">
+                                  <!-- components container is injected here -->
+                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <!-- REQUERY bloc-sources -->
             <div class="bloc-sources">
-                <div class="col">
-                    <div class="text-edit-content">
-                        <p class="text-htm html">SOURCE: INSEE <strong>publication 2020</strong></p>
-                        <i class="editable-text"></i>
-                      </div>
-                </div>
+                <!-- this text is editable in composer -->
             </div>
         </div><!-- fin du bloc -->
     </template>
 
 
-    <!-- REQUERY (n) template report-bloc is a report bloc -->
-    <template class="report-bloc" id="b4-4-4">
-        <div class="lyrow report-bloc b4-4-4" data-model-title="3 colonnes" data-model-description="33%/33%/33%">
-            <h4 class="bloc-title editable-text">Titre du bloc
-                <!-- this text is editable in composer -->
-            </h4>
-            <div class="view bloc-layout">
-                <div class="row">
-                    <div class="col-md-4 dividedcolumn customBaseColumn">
-                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
-                    </div>
-                    <div class="col-md-4 dividedcolumn customBaseColumn">
-                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
-                    </div>
-                    <div class="col-md-4 dividedcolumn customBaseColumn">
-                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
-                    </div>
-                </div>
-            </div>
-            <div class="bloc-sources">
-                <div class="col">
-                    <div class="text-edit-content">
-                        <p class="text-htm html">SOURCE: INSEE <strong>publication 2020</strong></p>
-                        <i class="editable-text"></i>
-                      </div>
-                </div>
-            </div>
+
+    <template class="report-element" id="btexte">
+        <div class="bloc-content">
+            <!-- this text is editable in composer -->
         </div>
     </template>
 
-    <!-- REQUERY (n) template report-bloc is a report bloc -->
-    <template class="report-bloc" id="b12">
-        <div class="lyrow report-bloc b12" data-model-title="1 colonne" data-model-description="100%">
-            <h4 class="bloc-title editable-text">
-                Titre du bloc
-                <!-- this text is editable in composer -->
-            </h4>
-            <div class="view bloc-layout">
-                <div class="row">
-                    <div class="col-md-12 dividedcolumn customBaseColumn">
-                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
-                    </div>
-                </div>
-            </div>
-            <div class="bloc-sources">
-                <div class="col">
-                    <div class="text-edit-content">
-                        <p class="text-htm html">SOURCE: INSEE <strong>publication 2020</strong></p>
-                        <i class="editable-text"></i>
-                      </div>
-                </div>
-            </div>
-        </div>
-    </template>
-
-    <!-- REQUERY (n) template report-bloc is a report bloc -->
-    <template class="report-bloc" id="b6-6">
-        <div class="lyrow report-bloc b6-6" data-model-title="2 colonnes" data-model-description="50%/50%">
-            <h4 class="bloc-title editable-text">
-                Titre du bloc
-                <!-- this text is editable in composer -->
-            </h4>
-            <div class="view bloc-layout">
-                <div class="row">
-                    <div class="col-md-6 dividedcolumn customBaseColumn">
-                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
-                    </div>
-                    <div class="col-md-6 dividedcolumn customBaseColumn">
-                        <div class="component-container card list-group-item"><!--dataviz|element component is injected here --></div>
-                    </div>
-                </div>
-            </div>
-            <div class="bloc-sources">
-                <div class="col">
-                    <div class="text-edit-content">
-                        <p class="text-htm html">SOURCE: INSEE <strong>publication 2020</strong></p>
-                        <i class="editable-text"></i>
-                      </div>
-                </div>
-            </div>
-        </div>
-    </template>
 
 
     <!-- REQUERY title component -->
@@ -169,18 +203,18 @@
     <!-- REQUERY chart component -->
     <template class="report-component dataviz" id="dvz-chart" data-ref="chart">
         <div class="report-component.chart full-width">
-            <div class="report-dataviz-title" >Titre</div>
-            <div id="{{dataviz}}" data-title="Titre" data-description="Description" class="dataviz report-chart"></div>
-            <div class="report-dataviz-description mt-auto">Description</div>
+            <div class="report-dataviz-title" ><!-- Titre --></div>
+            <div id="{{dataviz}}" class="dataviz report-chart"></div>
+            <div class="report-dataviz-description mt-auto"><!-- Description --></div>
         </div>
     </template>
 
     <!-- REQUERY table component -->
     <template class="report-component dataviz" id="dvz-table" data-ref="table">
         <div class="report-component.chart card-body">
-            <div class="report-dataviz-title" >Titre</div>
+            <div class="report-dataviz-title" ><!-- Titre --></div>
             <div id="{{dataviz}}" class="dataviz report-table"></div>
-            <div class="report-dataviz-description mt-auto">Description</div>
+            <div class="report-dataviz-description mt-auto"><!-- Description --></div>
         </div>
     </template>
     <!-- REQUERY text component -->
@@ -213,6 +247,9 @@
             </div>
         </div>
     </template>
+
+
+
     <!-- STYLE USED BY this TEMPLATE -->
     <style>
 /* Couleur de fond de la page*/
@@ -317,7 +354,7 @@
     margin-right: 0;
     height: 100%;
 }
-.view .row .col-md-12{
+.view .row .col-12{
     height: 100%;
 }
 .component-container:hover .report-share{
@@ -382,7 +419,7 @@
 .icon-default {
     background-image: url(/static/picto/default/icon-default.svg);
 }
-/* Icon & text used with empty dataviz */
+/* Icon and text used with empty dataviz */
 .model-b div.component-container:empty {
     min-height: 100px;
     background-image: url(/static/picto/black/travaux.svg);
@@ -448,4 +485,4 @@
     }
 }
     </style>
-</div>
+</html>
