Amélioration des rendus : import des anciens blocs texte, revue modèle B, gestion des CSS, intégration des icones

--- a/frontend/static/html/model-composer.html
+++ b/frontend/static/html/model-composer.html
@@ -24,7 +24,7 @@
         </ul>
     </template>
 
-    <!-- HTML wrapper used to construct structural blocks and append it to dom in #structure-models list -->
+    <!-- HTML wrapper used to construct structural blocks -->
     <template class="report-layout" id="wstructure">
         <li class="structure-item list-group-item handle" data-bloc="{{REF}}">
             <div class="bloc-tools btn-group btn-group-sm">
@@ -36,7 +36,7 @@
         </li>
     </template>
 
-    <!-- HTML wrapper used to construct elements components and append it to dom in #element-models list -->
+    <!-- HTML wrapper used to construct elements components -->
     <template class="report-layout" id="welement">
         <li class="element-item list-group-item handle" data-bloc="{{REF}}">
             <div class="data-tools btn-group btn-group-sm">
@@ -48,7 +48,7 @@
         </li>
     </template>
 
-    <!-- HTML wrapper used to construct dataviz components and append them to dom in #dataviz-items list -->
+    <!-- HTML wrapper used to construct dataviz components -->
     <template class="report-layout" id="wdataviz">
         <li class="dataviz-item list-group-item handle" data-dataviz="{{REF}}" data-type="{{TYPE}}" title="{{REF}}">
             <div class="data-tools btn-group btn-group-sm">
