Composer: fix init du sortable des components-container lors du drop des blocs (la definition en amont dans les #structure-models ne survit pas au clone du drop)

--- a/frontend/static/html/model-composer.html
+++ b/frontend/static/html/model-composer.html
@@ -81,7 +81,7 @@
     <template class="report-structure" id="bsimple">
         <div class="bloc-structure" data-label="Bloc simple" data-description="Bloc contenu uniquement">
             <div class="bloc-layout layout-rows container-fluid">
-                <div class="layout-cols fixed-layout row">
+                <div class="layout-cols row">
                     <div class="layout-cell col-12">
                         <!-- components container is injected here -->
                     </div>
@@ -97,7 +97,7 @@
                 <!-- this text is editable in composer -->Titre du bloc
             </div>
             <div class="bloc-layout layout-rows container-fluid">
-                <div class="layout-cols fixed-layout row">
+                <div class="layout-cols row">
                     <div class="layout-cell col-12">
                         <!-- components container is injected here -->
                     </div>
