Composer: Ajout d'un compteur d'utilisation sur chaque dataviz disponible

--- a/frontend/static/html/model-composer.html
+++ b/frontend/static/html/model-composer.html
@@ -58,6 +58,7 @@
             </div>
             <span class="dataviz-label"><i class="dvz-icon {{ICON}}" title="{{TYPE}}"></i> {{LABEL}}</span>
             <code class="dataviz-definition"></code>
+            <span class="counters badge"></span>
         </li>
     </template>
 
