--- a/frontend/static/html/wizard.html
+++ b/frontend/static/html/wizard.html
@@ -12,8 +12,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div id="wizard-parameters" data-dataviz="" class="col-lg-4">
-                            <div class="card">
-                                <div class="card-body">
+
                                     <div class="attribute input-group mb-3">
                                         <div class="input-group-prepend">
                                             <label class="input-group-text" for="selectedModelWizard">Modèle</label>
@@ -34,10 +33,8 @@
                                         <a class="nav-item nav-link show" href="#w2" data-toggle="tab">Avancé</a>
                                     </nav>
 
-                                    <div  id="dataviz-attributes" class="tab-content card-body">
+                                    <div id="dataviz-attributes" class="tab-content container mb-3">
                                         <div class="tab-pane active" id="w1">
-                                                <!--<p id="indicateur-metadata" style="display:none;"></p>-->
-
                                                     <div class="attribute input-group input-group-sm mb-3">
                                                         <div class="input-group-prepend">
                                                             <span class="input-group-text">unit</span>
@@ -112,9 +109,9 @@
                                                             class="figure form-control dataviz-attributes " disabled id="w_style_caption">
 
                                                     </div>-->
-
-
                                         </div>
+
+
                                         <div class="tab-pane" id="w2">
                                                 <div class="attribute input-group input-group-sm mb-3">
                                                     <div class="input-group-prepend">
@@ -210,11 +207,9 @@
                                         </div>
                                     </div><!-- End tab-content -->
 
-                                </div><!--end card body-->
-                                <div class="card-footer">
-                                    <button id="wizard_refresh" class="btn mreport-primary-color-2-bg">Actualiser</button>
-                                </div>
-                            </div> <!-- end card -->
+                                    <div>
+                                        <button id="wizard_refresh" class="btn btn-block mreport-primary-color-2-bg">Appliquer les paramètres</button>
+                                    </div>
                         </div> <!-- End wizard-parameters-->
 
 
