Wizard: revue complète des sélecteurs de couleurs (adaptations, corrections et évolutions sur la lib piklor custom)

--- a/frontend/static/html/model-b.html
+++ b/frontend/static/html/model-b.html
@@ -1,18 +1,4 @@
-<html id="model-b">
-
-    <template class="report-params">
-        <input type="color" id="col01" value="#005a66" name="Primaire" />
-        <input type="color" id="col02" value="#0094ab" name="Secondaire" />
-        <input type="color" id="col03" value="#b0252e" name="Infos" />
-        <input type="color" id="col04" value="#cf7a26" name="Texte" />
-        <input type="color" id="col05" value="#e3c213" name="" />
-        <input type="color" id="col06" value="#9fb935" name="" />
-        <input type="color" id="col07" value="#2f476c" name="" />
-        <input type="color" id="col08" value="#b0006b" name="" />
-        <input type="color" id="grey1" value="#555555" name="Gris foncé" />
-        <input type="color" id="grey2" value="#999999" name="Gris moyen" />
-        <input type="color" id="grey3" value="#cccccc" name="Gris clair" />
-    </template>
+<html id="model-b" data-colors="#005a66,#0094ab,#b0252e,#cf7a26,#e3c213,#9fb935,#2f476c,#b0006b,#555555,#999999">
 
     <!-- HTML wrapper used to construct the main report container in the composer interface -->
     <template class="report-layout" id="wmain">
