Refonte du wizard

--- a/frontend/static/html/model-composer.html
+++ b/frontend/static/html/model-composer.html
@@ -2,8 +2,8 @@
 
     <!-- HTML wrapper used to construct the main report container in the composer interface -->
     <template class="report-layout" id="wmain">
-        <h2 id="composer-report-title">
-            <!-- title is injected here -->
+        <h2>Composition du rapport :
+            <span id="composer-report-title"><!-- title is injected here --></span>
         </h2>
         <ul id="report-composition" class="list-group">
             <!-- blocs are injected here -->
