--- a/frontend/static/html/wizard.html
+++ b/frontend/static/html/wizard.html
@@ -1,5 +1,5 @@
 <!-- Modal -->
-<div class="modal fade" id="wizard-panel" tabindex="-1" role="dialog" aria-labelledby="wizard-panel" aria-hidden="true">
+<div class="modal fade" id="wizard-panel" tabindex="-1" role="dialog" aria-labelledby="wizard-panel" aria-hidden="true" data-backdrop="static">
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <div class="modal-header">
