Mise à niveau CSS modèles de rendu front + fix CR/LF

--- a/frontend/static/html/model-b.html
+++ b/frontend/static/html/model-b.html
@@ -252,14 +252,16 @@
 .view, .lyrow {
     height:100%;
 }
-.view .customBaseColumn {
+
+.view .layout-cols.row {
+    margin-left:  0;
+    margin-right: 0;
+}
+.view .layout-rows,
+.view .layout-cell {
     padding: 0;
 }
-.view .row {
-    margin-left: 0;
-    margin-right: 0;
-    height: 100%;
-}
+
 .report-bloc .components-container {
     height: 100%;
 }
