--- a/frontend/static/html/model-a.html
+++ b/frontend/static/html/model-a.html
@@ -253,7 +253,7 @@
 
 /* titre du rapport */
 .report-bloc-title{
-  padding:30px 0;
+    padding:30px 0;
 }
 
 /* Texte libre */
@@ -261,45 +261,38 @@
 .titleBloc {
     font-size: 12px;
 }
-.customBaseColumn {
-    padding: 0;
-}
-.report-bloc .components-container {
-    display: flex;
+
+/*div[class*='col-'] {
+    padding-right:0;
+    padding-left:0;
+}*/
+.view, .lyrow{
     height: 100%;
-    justify-content: center;
-    /*margin:15px;*/
-    border-radius:0;
+}
+.view .layout-cols.row {
+    margin-left:  -10px;
+    margin-right: -10px;
+}
+.view .layout-rows,
+.view .layout-cell {
+    padding: 0 10px;
+}
+.view .row + .row {
+    margin-top: 10px;
+}
+
+.report-bloc .components-container {
+    height: 100%;
     border:none;
+    border-radius:0;
     box-shadow:0 0 5px #ddd;
 }
-.components-container .card-body {
+.report-bloc .components-container .card-body {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     width: 100%;
-    min-height:100px;
-}
-/* FROM MREPORT.CSS */
-div[class*="list-group-item"]{
-    padding-right: 0 !important;
-    padding-left: 0 !important;
-}
-/*div[class*='col-'] {
-    padding-right:0;
-    padding-left:0;
-}*/
-.view,
-.lyrow{
-    height: 100%;
-}
-.view .row .col-md-12{
-    height: 100%;
-}
-.bloc-layout .row {
-    margin-left: 0;
-    margin-right: 0;
     height: 100%;
 }
 
@@ -316,6 +309,7 @@ div[class*="list-group-item"]{
 .bloc-sources {
     font-size: 12px;
     margin-top:30px;
+    text-align: right;
 }
 .bloc-sources p{
     color:#0094ab;
@@ -393,12 +387,6 @@ div[class*="list-group-item"]{
     opacity: 0.50;
 }
 /* DATAVIZ FIGURE */
-.card-body .report-figure{
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-}
 .report-figure-chiffre {
     color:#ab1700;
     font-size: 40px;
